# Dikt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-rpm.sh  build.rs  bump-release-build-install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: rpm-repo.yml
data/: gschemas.compiled  io.dikt.Transcription.gschema.xml
ibus-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
ibus-sys/src/: lib.rs
packaging/fedora/: 90-dikt-input.rules  90-dikt.preset  dikt.service  dikt.xml.in  ibus-dikt.spec.in  io.dikt.Dikt.desktop  io.dikt.Transcription.service
src/: actions.rs  app.rs  audio_feedback.rs  global_shortcuts.rs  ibus_control.rs  key_mapping.rs  lib.rs  llm_client.rs  main.rs  settings.rs  text_utils.rs
src/audio_toolkit/: mod.rs  text.rs
src/audio_toolkit/audio/: recorder.rs
src/dbus/: mod.rs  server.rs
src/ibus_engine/: context.rs  mod.rs
src/managers/: audio.rs  model.rs  transcription.rs
src/ui/: mod.rs  sidebar.rs  window.rs
src/ui/overlay/: mod.rs  waveform.rs
src/ui/pages/: about.rs  advanced.rs  debug.rs  general.rs  mod.rs  models.rs
src/utils/: launch.rs  logging.rs  mod.rs
